--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-     "email:dev": "email dev",
+    "email:dev": "email dev",
     "lint": "eslint"
   },
   "dependencies": {
@@ -15,6 +15,7 @@
     "@prisma/adapter-pg": "^7.3.0",
     "@prisma/client": "^7.3.0",
     "@radix-ui/react-slot": "^1.2.4",
+    "@react-email/components": "^1.0.7",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "date-fns": "^4.1.0",
@@ -30,6 +31,7 @@
     "react-hook-form": "^7.71.1",
     "react-spinners": "^0.17.0",
     "recharts": "^3.7.0",
+    "resend": "^6.9.1",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0",
     "vaul": "^1.1.2",
@@ -41,6 +43,7 @@
     "eslint": "^9",
     "eslint-config-next": "16.1.6",
     "prisma": "^7.3.0",
+    "react-email": "5.2.6",
     "tailwindcss": "^4",
     "tw-animate-css": "^1.4.0"
   }
